KuberenetesDeployment/Basic/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  selector:
    app: service1
  ports:
    - port: 80
      targetPort: 3000
