KuberenetesDeployment/Basic/service2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  selector:
    app: service2
  ports:
    - port: 80
      targetPort: 3000
